tests/sksl/errors/Ossfuzz32587.glsl
### Compilation failed:

error: 1: unknown identifier 'x1'
const float x=1, _=x1;
                   ^^
error: 2: expected 'half', but found 'float'
half x=x*8;
       ^^^
2 errors
